[gd_scene load_steps=7 format=3 uid="uid://bc4cjrukmrqvo"]

[ext_resource type="Script" path="res://Loony_Lips.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://db0qyrdnny81r" path="res://gfx/blackboard.jpg" id="2"]
[ext_resource type="FontFile" uid="uid://bkrtc1rpy7ecn" path="res://gfx/Feltpen.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://7hptqg4cfmwj" path="res://gfx/blue_button11.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b2nn7qb1rpb8c" path="res://gfx/blue_button12.png" id="5"]

[sub_resource type="Theme" id="Theme_n0eww"]
default_font = ExtResource("3")
default_font_size = 25

[node name="Loony_Lips" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme = SubResource("Theme_n0eww")
text = "Place Holder dfdfsdfssdfsd
dfdfdf"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")

[node name="LabelForButton" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_player_text_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
